--- a/tals-ui/react-backtest-ui/package.json
+++ b/tals-ui/react-backtest-ui/package.json
@@ -15,7 +15,8 @@
     "chartjs-plugin-zoom": "^2.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
