--- a/tals-ui/react-backtest-ui/package.json
+++ b/tals-ui/react-backtest-ui/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.0",
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "chartjs-plugin-zoom": "^2.2.0",
